added less support

--- a/index.html
+++ b/index.html
@@ -3,56 +3,60 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>CSS @font-face</title>
+		<title>Mterq.am</title>
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
-		<div id="header">
-			<header>
-				<p class="font-kamavor">գյուղմթերք</p>
+		<header>
+			<div class="header-content">
+				<p class="font-kamavor logo">
+					<a href="/">
+						գյուղ<span>մթերք</span>
+					</a>
+				</p>
 				<ul>
-					<li>menu item</li>
-					<li>menu item</li>
-					<li>menu item</li>
+					<li class="text-uppercase"><a href="/">նախագծի մասին</a></li>
+					<li class="text-uppercase"><a href="/">միանալ մեզ</a></li>
+					<li class="text-uppercase"><a href="/">կապ</a></li>
 				</ul>
-			</header>
-		</div>
+			</div>
+		</header>
 		<div class="container">
 			<div class="hero">
 				<div class="half">
 					<p class="font-kamavor">
-						Զանգահարիր մեզ, ԵՎ քո մթերքը մեր էջում ԵՎս կգտնի իր պատվիրատուին
+						Զանգահարիր մեզ, ԵՎ <span>քո մթերքը</span> մեր էջում ԵՎս <span>կգտնի իր պատվիրատուին</span>
 					</p>
 					<button class="main-button">զանգահարել</button>
 				</div>
 				<div class="half">
-					<img src="img/grapes.png">
+					<img src="assets/img/grapes.png" alt="hero-image">
 				</div>
 			</div>
 			<div class="main-content">
 				<aside>
 					<div class="filters-container">
 						<div class="title">
-							<p>կատեգորիաներ</p>
-							<img src="img/categories.svg" alt="Categories Icon">
+							<p class="font-bold text-uppercase">կատեգորիաներ</p>
+							<img src="assets/img/icons/categories.svg" alt="Categories Icon">
 						</div>
 						<div class="filters">
 							<div class="category">
 								<button>
 									<span class="label">
-										<img src="img/fruit-icon.svg"> Միրգ
+										<img src="assets/img/icons/fruit-icon.svg" alt="fruit-icon"> Միրգ
 									</span>
-									<img src="img/caret-bold.svg">
+									<img src="assets/img/icons/caret-bold.svg" alt="caret">
 								</button>
 							</div>
 						</div>
 					</div>
 				</aside>
 				<div class="filtered-content">
-					<div><img src="img/grapes.png"></div>
-					<div><img src="img/grapes.png"></div>
-					<div><img src="img/grapes.png"></div>
-					<div><img src="img/grapes.png"></div>
+					<div><img src="assets/img/grapes.png"></div>
+					<div><img src="assets/img/grapes.png"></div>
+					<div><img src="assets/img/grapes.png"></div>
+					<div><img src="assets/img/grapes.png"></div>
 				</div>
 			</div>
 		</div>
