--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 					<li class="text-uppercase"><a href="/">նախագծի մասին</a></li>
 					<li class="text-uppercase"><a href="/">միանալ մեզ</a></li>
 					<li class="text-uppercase"><a href="/">կապ</a></li>
+					<li>
+						<a href="tel:+37499999999" class="main-button">+374 99 999 999</a>
+					</li>
+					<li>
+						<a href="/" class="favorites">
+							<img src="assets/img/icons/heart.svg" alt="heart">
+							<img src="assets/img/icons/heart-hover.svg" alt="heart hover state" class="heart-hover-state">
+						</a>
+					</li>
 				</ul>
 			</div>
 		</header>
@@ -27,7 +36,7 @@
 					<p class="font-kamavor">
 						Զանգահարիր մեզ, ԵՎ <span>քո մթերքը</span> մեր էջում ԵՎս <span>կգտնի իր պատվիրատուին</span>
 					</p>
-					<button class="main-button">զանգահարել</button>
+					<a href="tel:+37499999999" class="main-button">զանգահարել</a>
 				</div>
 				<div class="half">
 					<img src="assets/img/grapes.png" alt="hero-image">
@@ -60,5 +69,35 @@
 				</div>
 			</div>
 		</div>
+	<footer>
+		<div class="container">
+			<p class="text-uppercase text-center form-label font-normal">Նորությունների Եվ թարմացումների համար՝</p>
+			<div class="subscribe">
+				<input type="email" name="email" placeholder="էլ-փոստ">
+				<button class="main-button font-normal" type="submit">Բաժանորդագրվել</button>
+			</div>
+			<ul class="footer-menu font-normal">
+				<li><a href="/">Նախագծի մասին</a></li>
+				<li><a href="/">Միանալ մեզ</a></li>
+				<li><a href="/">Կապ</a></li>
+			</ul>
+			<div class="social-copyright-section">
+				<div class="empty"></div>
+				<ul class="social">
+					<li>
+						<a href="/" target="_blank">
+							<img src="assets/img/icons/fb.svg" alt="facebook logo">
+						</a>
+					</li>
+					<li>
+						<a href="/" target="_blank">
+							<img src="assets/img/icons/ig.svg" alt="instagram logo">
+						</a>
+					</li>
+				</ul>
+				<p class="copyright-text text-uppercase font-normal">© Գյուղմթերք, 2023</p>
+			</div>
+		</div>
+	</footer>
 	</body>
 </html>
